<resources>
    <string name="app_name">Sistema de Cálculo Fotovoltaico y Eólico</string>
    <string name="sistema_fotovoltaico">Sistema Fotovoltaico</string>
    <string name="sistema_eolico">Sistema Eólico</string>
    <string name="interconectado_red">Interconectado a la red</string>
    <string name="whit_battery">Con baterias</string>
    <!--string name="creditos">Desarrollado por @SimplexCE</string-->
    <string name="creditos"></string>
    <string name="help">Ayuda</string>
    <string name="back">Atras</string>
    <string name="settings">Configuración</string>
    <string name="domain">Dominio</string>
    <string name="ok">Confirmar</string>
    <string name="pak_solar">Hora solar pico</string>
    <string name="vmpp">VPMM (v)</string>
    <string name="dimension">Dimensión (m)</string>
    <string name="IMPP">IMPP (A)</string>
    <string name="ISC">ISC (A)</string>
    <string name="controllers">Número de controladores</string>
    <string name="involtage">Voltaje entrada MPPT (v)</string>
    <string name="system_voltage">Voltaje del sistema (v)</string>
    <string name="IDC">IDC (A)</string>
    <string name="efficiency">Eficiencia</string>
    <string name="price">Precio</string>
    <string name="question_battery_1">Ingresar cuántos días de autonomía desea para el sistema aislado</string>
    <string name="uestion_battery_2">5. Escoja la batería que desea instalar</string>
    <string name="battery">Batería</string>
    <string name="battery_capacity">Capacidad de la batería</string>
    <string name="voltage">Voltaje</string>
    <string name="profudity_discharge">Profundidad de descarga</string>
    <string name="battery_data">4. Datos batería</string>
    <string name="consume">1. Ingresa el promedio de consumo de energía (w/h)</string>
    <string name="ubication">2. Seleccione el lugar a instalar sistema fotovoltaico</string>
    <string name="sun_panel">3. Selecciona el tipo de panel solar</string>
    <string name="inversor_f">4. Selecciona el tipo de inversor</string>
    <string name="inversor_b">6. Selecciona el tipo de inversor</string>
    <string name="calculate">Calcular</string>
    <string name="result">Resultados</string>
    <string name="article">Articulo</string>
    <string name="count">Cantidad</string>
    <string name="total">Total</string>
    <string name="power">Potencia del módulo (W)</string>
    <string name="fail_energy">Debe ingresar el consumo promedio de energía</string>
    <string name="number_string">Se debe colocar <b>%s</b> paneles en serie para cada controlador en este caso <b>%s</b></string>
    <string name="min_area">El area minima que se necesita para la instalación es de <b>%s</b> m²</string>
    <string name="monthly_savings">Se genero un ahorro mensual de <b>%s</b> pesos</string>
    <string name="error_inversor_title">¡Algo a fallado!</string>
    <string name="error_inversor_message_">No es posible implementar un sistema fotovoltaico en esta ciudad.</string>
    <string name="error_inversor_message">No es posible implementar un sistema eolico en esta ciudad.</string>
    <string name="fail_days">Este campo es obligatorio.</string>
    <string name="recuperation_battery">La recuperación de la inversión para un sistema fotovoltaico aislado esta entre 15 a 25 años.</string>
    <string name="welcome_eolico">Bienvenidos al sistema experto para cálculo de generación de energía eólica</string>
    <string name="system_eolico">Sistema Eólico</string>
    <string name="ubication_eolico">2. Seleccione el lugar a instalar sistema eolico</string>
    <string name="speed">Velocidad del viento (m/s)</string>
    <string name="air_rosa">Rosa de los vientos</string>
    <string name="instrument">Instrumento</string>
    <string name="characteristic">Caracteristica</string>
    <string name="first_help"><![CDATA[Bienvenido al SISTEMA EXPERTO PARA LA CARACTERIZACIÓN DEL DISEÑO DE UN SISTEMA DE GENERACIÓN DE ENERGÍA FOTOVOLTAICA Y EÓLICA ]]></string>
    <string name="first_description_help"><![CDATA[En el siguiente menú encontrará dos opciones: sistema fotovoltaico y sistema eólico, el cual podrá obtener los diseños junto con las cotizaciones para la implementación del sistema.  Si desea generar energía eléctrica usando el sol como fuente de energía acceda a SISTEMA FOTOVOLTAICO. Si desea generar energía eléctrica usando el viento como fuente energía acceda a SISTEMA EÓLICO. Si escoge el sistema eólico, ingresar la potencia que desea generar en (W) y escoger la ubicación donde desea implementar el sistema.]]></string>
    <string name="second_description_help"><![CDATA[Se encuentra en el espacio para el diseño de sistemas fotovoltaicos. Si desea implementar un sistema fotovoltaico que genera energía y adicionalmente, se encuentre conectado a la red seleccione INTERCONECTADO A LA RED. Si por el contrario desea que su futuro sistema fotovoltaico sea un sistema autónomo seleccione CON BATERÍAS. En INTERCONECTADO A LA RED, como usuario deberá proporcionar al sistema experto el consumo de energía promedio diario en (W/h), escoger la ubicación, el panel y el inversor dentro de las opciones que brinda el aplicativo. Finalmente, si su elección es sistemas fotovoltaicos con BATERIAS, recuerde que debe suministrar al sistema experto los días de autonomía que desea que tenga su sistema fotovoltaico.]]></string>
    <string name="consume_2">1. Ingresar la potencia a generar (W)</string>
</resources>
