<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FormularioBateriaActivity">

    <LinearLayout
        style="@style/LinearLayoutCustom"
        android:background="@drawable/background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewa"
            style="@style/TextViewCustom.Title"
            android:text="@string/whit_battery"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textViewb1"
            style="@style/TextViewCustom.Question"
            android:text="@string/consume" />


        <EditText
            android:id="@+id/edittext_energy"
            style="@style/EditText"
            android:layout_width="150dp"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textViewc2"
            style="@style/TextViewCustom.Question"
            android:text="@string/ubication" />

        <include layout="@layout/component_ubication" />

        <TextView
            android:id="@+id/textVie36wc"
            style="@style/TextViewCustom.Question"
            android:text="@string/sun_panel" />

        <LinearLayout style="@style/LinearLayoutCustom.Item">

            <TextView
                android:id="@+id/textVicsdt"
                style="@style/TextViewCustom.Item"
                android:layout_weight="1"
                android:text="Panel" />

            <Spinner
                android:id="@+id/spinner_panel"
                style="@style/Spinner"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutCustom.Item">

            <TextView
                android:id="@+id/textfvfrVacvsdt2"
                style="@style/TextViewCustom.Item"
                android:layout_weight="1"
                android:text="Potencia del módulo" />

            <TextView
                android:id="@+id/textview_potencia_modulo"
                style="@style/EditText"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutCustom.Item">

            <TextView
                android:id="@+id/textview11"
                style="@style/TextViewCustom.Item"
                android:layout_weight="1"
                android:text="@string/dimension" />

            <TextView
                android:id="@+id/textview_dimension"
                style="@style/EditText"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutCustom.Item">

            <TextView
                android:id="@+id/textview1"
                style="@style/TextViewCustom.Item"
                android:layout_weight="1"
                android:text="@string/vmpp" />

            <TextView
                android:id="@+id/textview_vpmm"
                style="@style/EditText"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutCustom.Item">

            <TextView
                android:id="@+id/textview12"
                style="@style/TextViewCustom.Item"
                android:layout_weight="1"
                android:text="@string/IMPP" />

            <TextView
                android:id="@+id/textview_lmpp"
                style="@style/EditText"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutCustom.Item">

            <TextView
                android:id="@+id/textfrVacvsdt"
                style="@style/TextViewCustom.Item"
                android:layout_weight="1"
                android:text="@string/ISC" />

            <TextView
                android:id="@+id/textview_lsc_panel"
                style="@style/EditText"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutCustom.Item">

            <TextView
                android:id="@+id/textfvfrVicsdt2"
                style="@style/TextViewCustom.Item"
                android:layout_weight="1"
                android:text="Precio" />

            <TextView
                android:id="@+id/textview_price_panel"
                style="@style/EditText"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            style="@style/TextViewCustom.Question"
            android:text="@string/battery_data" />

        <LinearLayout style="@style/LinearLayoutCustom.Item">

            <TextView
                android:id="@+id/textViewb"
                style="@style/TextViewCustom.Item"
                android:layout_weight="1"
                android:text="@string/question_battery_1" />

            <EditText
                android:id="@+id/editText_days"
                style="@style/EditText"
                android:layout_weight="1"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewc"
            style="@style/TextViewCustom.Question"
            android:text="@string/uestion_battery_2" />

        <LinearLayout style="@style/LinearLayoutCustom.Item">

            <TextView
                android:id="@+id/textViewd"
                style="@style/TextViewCustom.Item"
                android:layout_weight="1"
                android:text="@string/battery" />

            <Spinner
                android:id="@+id/spinner_battery"
                style="@style/Spinner"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutCustom.Item">

            <TextView
                android:id="@+id/textViewdt"
                style="@style/TextViewCustom.Item"
                android:layout_weight="1"
                android:text="@string/battery_capacity" />

            <TextView
                android:id="@+id/textview_capacity_battery"
                style="@style/EditText"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutCustom.Item">

            <TextView
                android:id="@+id/textViewsdt"
                style="@style/TextViewCustom.Item"
                android:layout_weight="1"
                android:text="@string/voltage" />

            <TextView
                android:id="@+id/textview_voltage"
                style="@style/EditText"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutCustom.Item">

            <TextView
                android:id="@+id/textfvfrVacvsdt"
                style="@style/TextViewCustom.Item"
                android:layout_weight="1"
                android:text="@string/profudity_discharge" />

            <TextView
                android:id="@+id/textview_profundity_discharge"
                style="@style/EditText"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutCustom.Item">

            <TextView
                android:id="@+id/textfvfrVicsdt"
                style="@style/TextViewCustom.Item"
                android:layout_weight="1"
                android:text="Precio" />

            <TextView
                android:id="@+id/textview_price_battery"
                style="@style/EditText"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/textVie6wc"
            style="@style/TextViewCustom.Question"
            android:layout_weight="1"
            android:text="@string/inversor_b" />

        <include layout="@layout/component_inversor" />

        <Button
            android:id="@+id/button_calculate"
            style="@style/ButtonCustom.Operation"
            android:onClick="onClick"
            android:text="Calcular" />

        <TextView
            android:id="@+id/textView"
            style="@style/TextViewCustom.TextFooter"
            android:text="@string/creditos"
            android:textAlignment="center" />


    </LinearLayout>

</ScrollView>