<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView_instrument"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/instrument"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView_characteristic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/characteristic"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/count"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/price"
        android:textAlignment="center" />

</LinearLayout>