<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textview_article"
        style="@style/TextViewCustom.Item"
        android:paddingHorizontal="5dp"
        android:paddingVertical="10dp"
        android:layout_weight="1"
        android:text="@string/article"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textview_count"
        style="@style/TextViewCustom.Item"
        android:paddingHorizontal="5dp"
        android:paddingVertical="10dp"
        android:layout_weight="1"
        android:text="@string/count"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textview_price"
        style="@style/TextViewCustom.Item"
        android:paddingHorizontal="5dp"
        android:paddingVertical="10dp"
        android:layout_weight="1"
        android:text="@string/price"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textview_total"
        style="@style/TextViewCustom.Item"
        android:paddingHorizontal="5dp"
        android:paddingVertical="10dp"
        android:layout_weight="1"
        android:text="@string/total"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

</LinearLayout>